# uart

./: Makefile  Makefile.am  Makefile.in  aclocal.m4  config.status  configure  configure.ac  libtool  main.c  meson.build  style
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
po/: Makefile  Makefile.in  POTFILES  POTFILES.in  uart.mo  uart.pot  zh_CN.gmo  zh_CN.po  zh_CN.po~
src/: Makefile  Makefile.am  Makefile.in  main.c  meson.build  tags  uart  uart-bottom.c  uart-bottom.h  uart-config.c  uart-config.h  uart-init.c  uart-init.h  uart-read.c  uart-read.h  uart-receive.c  uart-receive.h  uart-send.c  uart-send.h  uart-share.c  uart-share.h  uart-text.c  uart-text.h  uart-write.c  uart-write.h  uart.h
src/.deps/: uart-main.Po  uart-uart-bottom.Po  uart-uart-config.Po  uart-uart-init.Po  uart-uart-rdwr.Po  uart-uart-read.Po  uart-uart-receive.Po  uart-uart-send.Po  uart-uart-share.Po  uart-uart-text.Po  uart-uart-write.Po
