AC_PREREQ([2.63])
AC_INIT(configure.ac)
AM_INIT_AUTOMAKE(uart,0.1)
AM_SILENT_RULES([yes])
AM_MAINTAINER_MODE([enable])
GNOME_MAINTAINER_MODE_DEFINES

AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC
PKG_PROG_PKG_CONFIG
AM_PROG_VALAC([0.25.1])
AM_PROG_CC_C_O

LT_PREREQ([2.4])
LT_INIT

GLIB_GSETTINGS

AC_CONFIG_MACRO_DIR([m4])

GLIB_REQUIRED=2.40.0
GTK_REQUIRED=3.13.4

PKG_CHECK_MODULES([GLIB], [
    glib-2.0
])
PKG_CHECK_MODULES([GTK], [
    gtk+-3.0
])
 PKG_CHECK_MODULES([VTE], [
    vte-2.91
])
AC_SUBST([GLIB_REQUIRED])

AC_CHECK_LIB([m],[floor])
IT_PROG_INTLTOOL([0.50])
AC_SUBST(GETTEXT_PACKAGE, uart)

YELP_HELP_INIT

AC_CONFIG_FILES([
Makefile
po/Makefile.in
src/Makefile
])
AC_OUTPUT
